@@ -1,3 +1,8 @@
+2008-09-25 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
+
+	* src/MMapArea.py
+	Fix issue 126.
+
 2008-08-10 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
 
 	* src/MMapArea.py
